[package]
name = "cachedhash"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Wrapper for values that caches their hash."
repository = "https://github.com/pali6/cachedhash"
homepage = "https://github.com/pali6/cachedhash"
keywords = ["hash", "cache", "hashing", "performance", "wrapper"]

[lib]

[dependencies]

[dev-dependencies]
criterion = "0.4"
nohash-hasher = "0.2"

[[bench]]
name = "base"
harness = false